changes overflow to hidden on about image to stop it spilling over

--- a/styles/main.css
+++ b/styles/main.css
@@ -255,6 +255,7 @@ p {
   border: 0.5rem solid var(--clr-primary);
   max-width: 30rem;
   /* extra stuff */
+  overflow: hidden;
 }
 
 .about-picture {
